@@ -1,7 +1,7 @@
 [Desktop Entry]
-_Name=Ailurus - APT recovery
-_Comment=makes Linux easier to use
-Exec=/usr/bin/ailurus --fast --apt-recovery
+Name=Ailurus - recovery
+Comment=makes Linux easier to use
+Exec=/usr/bin/ailurus --fast --recovery
 Icon=/usr/share/ailurus/data/velly_icons/m_recovery.png
 Terminal=false
 X-MultipleArgs=false
