@@ -1,10 +1,0 @@
-[Desktop Entry]
-_Name=Ailurus - RPM recovery
-_Comment=makes Linux easier to use
-Exec=/usr/bin/ailurus --fast --rpm-recovery
-Icon=/usr/share/ailurus/data/velly_icons/m_recovery.png
-Terminal=false
-X-MultipleArgs=false
-Type=Application
-StartupNotify=true
-Categories=System;
