@@ -1,3 +1,7 @@
+2010-04-02 Homer Xing <homer.xing@gmail.com>
+
+    * Merge apt-recovery.desktop and rpm-recovery.desktop
+
 2010-04-01 Homer Xing <homer.xing@gmail.com>
 
     * Improve "quick setup" functionality.
